--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-13  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/71166
+	* g++.dg/cpp0x/constexpr-array18.C: New test.
+
 2017-01-13  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	PR fortran/78534
