--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-15  Joseph Myers  <joseph@codesourcery.com>
+
+	* fr.po: Update.
+
 2017-01-09  Joseph Myers  <joseph@codesourcery.com>
 
 	* da.po, es.po, sv.po, vi.po: Update.
