--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2017-01-16  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	Revert:
+        2017-01-16  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/71737
+	* g++.dg/cpp0x/pr71737.C: New.
+
 2017-01-16  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* gcc.target/powerpc/swaps-p8-27.c: New.
