--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-16  Carl Love  <cel@us.ibm.com>
+
+	* gcc.target/powerpc/builtins-3.c: New vec_nabs testcase.
+	* gcc.target/powerpc/builtins-3-p8.c: New vec_nabs testcase.
+
 2017-01-16 Carl Love  <cel@us.ibm.com>
 
 	* gcc.target/powerpc/builtins-3-p9.c (test_ne_long()):
