--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/79080
+	* gcc.dg/pr79080.c: New test.
+
 2017-01-16  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c/78304
