--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-17  Alan Modra  <amodra@gmail.com>
+
+	PR target/79066
+	* config/rs6000/rs6000.md (elf_high, elf_low): Disable when pic.
+	* config/rs6000/rs6000.c (rs6000_emit_allocate_stack): Don't allow
+	symbolic stack limit when pic.
+
 2017-01-16  Martin Sebor  <msebor@redhat.com>
 
 	PR tree-optimization/78608
