--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-17  Alan Modra  <amodra@gmail.com>
+
+	* gcc.target/powerpc/pr79066.c: New.
+
 2017-01-16  Jeff Law  <law@redhat.com>
 
 	PR tree-optimization/33562
