--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-17  Aldy Hernandez  <aldyh@redhat.com>
+
+	PR c/79116
+	* array-notation-common.c (cilkplus_extract_an_triplets): Convert
+	start type to integer_type.
+
 2017-01-16  Jakub Jelinek  <jakub@redhat.com>
 
 	PR driver/49726
