--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/71854
+	* gcc.dg/vect/pr71854.c: New test.
+
 2017-01-17  Martin Liska  <mliska@suse.cz>
 
 	PR ipa/71207
