--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-17  Martin Sebor  <msebor@redhat.com>
+
+	PR testsuite/79115
+	* gcc.dg/pr78768.c: Make it a link-only test.
+
 2017-01-17  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c++/71497
