--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-17  Kito Cheng  <kito.cheng@gmail.com>
+            Kuan-Lin Chen  <kuanlinchentw@gmail.com>
+
+	PR target/79079
+	* internal-fn.c (expand_mul_overflow): Use convert_modes instead of
+	gen_lowpart.
+
 2017-01-17  Vladimir Makarov  <vmakarov@redhat.com>
 
 	PR target/79058
