--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-17  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* config/rs6000/rs6000.c (rs6000_emit_move): Also use a TOC reference
+	after forcing to constant memory when the code model is medium.
+
 2017-01-17  Julia Koval  <julia.koval@intel.com>
 
 	PR target/76731
